--- a/Ведение групп.html
+++ b/Ведение групп.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg web builder software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-5" style="background-image: url(assets/images/full-unsplash-photo-1429186219543-755f5bfeeef8-2000x1330-62.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top html web generator software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-5" style="background-image: url(assets/images/full-unsplash-photo-1429186219543-755f5bfeeef8-2000x1330-62.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -89,7 +89,7 @@
         <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 31px; padding-bottom: 31px;">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="mbr-section__header">&nbsp;3 беслпатных дня ведения для теста. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<div>&nbsp;<em>Что для этого нужно?</em></div></h2>
+                    <h2 class="mbr-section__header">&nbsp;3 бесплатных дня ведения для теста. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<div>&nbsp;<em>Что для этого нужно?</em></div></h2>
                     <ul class="mbr-reviews mbr-reviews--wysiwyg row">
                         <li class="mbr-reviews__item col-xs-12 col-sm-6 col-md-4">
                             <div class="mbr-reviews__text"><p class="mbr-reviews__p"><strong>Свяжитесь с нами </strong>по контактам:<br>Вконтакте</p><p class="mbr-reviews__p">ICQ, Skype , Email</p></div>
@@ -169,7 +169,7 @@ Email: i.rook@mail.ru<br>VK.COM &nbsp;&nbsp;<a href="http://vk.com/smm79" class=
                     <div class="hide" data-form-alert-success="true">Cпасибо, мы ответим на ваш вопрос в течении суток.</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="CdLwDCvhWzUsIeENuyOCrSKL0UuIX3p3L8VgnoDVu3EwESZdN5gCIqWKkOTgdGAKZZiglJk/Cloc30UX1DHBHXJIDzEwoxI4j8nb/5KAJ0++10opSejUUeaW66wVB0Ix" data-form-email="true">
+                    <input type="hidden" value="Yr+o8JIOZEZaUZnWijXLGTLPbstteLbdB9xxuUSHZDF9dlnV+J582Vq3xv8s1QAByCn8v3Uoiw8L2h5J/Q8xN/1BZo3/odLpsoUGwhssfGOR9aEzKH6WkKBiqiJ7rmP4" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email" data-form-field="Email">
